# unified-ai-api

./: .gitignore  LICENSE  MANIFEST.in  README.md  demo_utils.py  pyproject.toml  requirements.txt  update_requirements.bat  update_requirements.py
.github/workflows/: ci.yml
docs/: changelog.md  contributing.md  examples.md  index.md  installation.md  quickstart.md
docs/api_reference/: compatible_client.md  dispatcher.md  types.md
docs/user_guide/: api_types.md  basic_usage.md  configuration.md  error_handling.md
examples/: README.md  advanced_usage.py  basic_usage.py  openai_example.py  rest_api_example.py
src/unified_ai_api/: __init__.py  __main__.py  api_connection.py  auth_keys.py  compatible_client_api.py  providers_config_handlers.py
src/unified_ai_api/_utils/: __init__.py  config_loaders.py  type_converters.py
src/unified_ai_api/config/: __init__.py  defaults.json  providers.json  secret.json.template
src/unified_ai_api/types/: __init__.py  api_types.py  chat_response.py  default_config.py  providers_types.py  secret_config.py
tests/: __init__.py  conftest.py  test_api_ai.py  test_api_ai_comprehensive.py
